--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,6 +14,7 @@ layout: none
       {%- include scripts/common.js -%}
     </script>
     {%- include scripts/variables.html -%}
+    {% include comments.html %}
   </head>
   <body>{{ content }}</body>
 </html>
