--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,7 +14,9 @@ layout: none
       {%- include scripts/common.js -%}
     </script>
     {%- include scripts/variables.html -%}
-    {% include comments.html %}
   </head>
-  <body>{{ content }}</body>
+  <body>
+    {{ content }}
+    {% include comments.html %}
+  </body>
 </html>
