--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -84,7 +84,9 @@ layout: base
         </div>
       {%- endif -%}
       </div>
-
+      
+      {% include comments.html %}
+      
       <div class="page__footer">{%- include footer.html -%}</div>
 
     </div>
