--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -3,6 +3,13 @@ layout: page
 title: 404
 show_title: false
 ---
+
+# 404
+# Go to [blog main](mindojune.github.io)
+
+Page not found! :(
+
+
 <div class="layout--404">
   <div class="main">
     <h1>404</h1>
