--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -4,8 +4,6 @@ title: 404
 show_title: false
 ---
 
-# 404
-# Go to [blog main](mindojune.github.io)
 
 Page not found! :(
 
@@ -13,5 +11,7 @@ Page not found! :(
 <div class="layout--404">
   <div class="main">
     <h1>404</h1>
+    <h2>Page not found! :(</h2>
+    <h2>Go to [blog main](mindojune.github.io)</h2>
   </div>
 </div>
