--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -12,6 +12,6 @@ Page not found! :(
   <div class="main">
     <h1>404</h1>
     <h2>Page not found! :(</h2>
-    <h2>Go to [blog main](mindojune.github.io)</h2>
+    <h2>Go to <a href="mindojune.github.io">blog main</a></h2>
   </div>
 </div>
