--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -8,8 +8,10 @@ show_title: false
 
 <div class="layout--404">
   <div class="main">
-    <h1>404</h1>
-    <h2>Page not found! :(</h2>
-    <h2>Go to <a href="mindojune.github.io">blog main</a></h2>
+    <div align="center">
+      <h1>404</h1>
+      <h2>Page not found! :(</h2>
+      <h2>Go to <a href="mindojune.github.io">blog main</a></h2>
+    </div>
   </div>
 </div>
