--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,3 +1,13 @@
 {%- if jekyll.environment != "development" -%}
   {%- include analytics-providers/google.html -%}
 {%- endif -%}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121680114-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121680114-1');
+</script>
