--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,3 +24,5 @@
 {%- include snippets/get-sources.html -%}
 {%- assign _sources = __return -%}
 <link rel="stylesheet" href="{{ _sources.font_awesome }}" >
+
+{%- include analytics.html -%}
