--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -3,7 +3,15 @@ layout: page
 title: 404
 show_title: false
 ---
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121680114-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-121680114-1');
+</script>
 
 
 <div class="layout--404">
