--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,28 +1,16 @@
 ---
 layout: default
 ---
-<div id="navbar" class="container">
-    <h5><a id="link-back" href="/">Main</a></h5>
-    {% include share.html %}
+<div class="layout--all js-all">
+  <div class="search-box js-search-box">
+    <div class="icon-search"><i class="fas fa-search"></i></div>
+    <input type="text" />
+    <div class="button icon-clear"><i class="fas fa-times"></i></div>
+  </div>
+  {%- include tags.html -%}
+  <div class="js-result layout--all__result"></div>
 </div>
 
-<div id="cover" class="container"
-     {% if page.image %}style="background-image: url({{ page.image }});"{% endif %}>
-    <div>
-        <h1>{{ page.title | default: page.name }}</h1>
-        <p>All Posts in <strong>{{ page.name }}</strong></p>
-    </div>
-</div>
-
-<div id="content" class="container">
-    <div id="tag-content" role="main">
-        <ul id="post-list">
-            {% for post in site.posts %}
-                {% if post.tags contains page.name %}
-                    {% include item.html %}
-                {% endif %}
-            {% endfor %}
-        </ul>
-        {% include pagination.html %}
-    </div>
-</div>
+<script>
+  {%- include scripts/archieve.js -%}
+</script>
