--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -30,10 +30,10 @@ $text-color-l:     $text-color-theme-light-l;
 $text-background-color: rgba(#000, .05);
 
 // border and shadow colors
-$border-color:     mix(#000, $background-color, 20%);
-$border-color-l:   mix(#000, $background-color, 10%);
-$decorate-color:   rgba(#bb6170, .15);
-$mask-color:       rgba(#000, .8);
+$border-color:     mix(#fff, $background-color, 20%);
+$border-color-l:   mix(#fff, $background-color, 10%);
+$decorate-color:   rgba(#fff, .1);
+$mask-color:       rgba(#fff, .8);
 $select-color:     rgba($main-color-1, .5);
 
 // function colors
@@ -41,7 +41,7 @@ $green:           #57c22d;
 $blue:            #2593fc;
 $yellow:          #f8ac30;
 $red:             #f22635;
-$text-color-function: #fff;
+$text-color-function: rgba(#fff, .9);
 
 // logo colors
 $mail-color:       #0072c5;
