--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -13,7 +13,7 @@ $main-color-3:     #7cc7bb;
 $text-color-3:     #fff;
 
 // background colors
-$background-color: #f8fcfb;
+$background-color: #2f4f4f;
 // text colors
 $text-color-theme-light-d: #325f74;
 $text-color-theme-light:   #3e758f;
