--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -13,7 +13,7 @@ $main-color-3:     #7cc7bb;
 $text-color-3:     #fff;
 
 // background colors
-$background-color: #2f4f4f;
+$background-color: #d0b0b0;
 // text colors
 $text-color-theme-light-d: #325f74;
 $text-color-theme-light:   #3e758f;
@@ -27,7 +27,7 @@ $text-color-d:     $text-color-theme-light-d;
 $text-color:       $text-color-theme-light;
 $text-color-l:     $text-color-theme-light-l;
 
-$text-background-color: rgba(#000, .05);
+$text-background-color: rgba(208, 176, 176, 1.0);
 
 // border and shadow colors
 $border-color:     mix(#fff, $background-color, 20%);
