--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -15,9 +15,9 @@ $text-color-3:     #fff;
 // background colors
 $background-color: #d0b0b0;
 // text colors
-$text-color-theme-light-d: #325f74;
-$text-color-theme-light:   #3e758f;
-$text-color-theme-light-l: #619dbb;
+$text-color-theme-light-d: #ffffff;
+$text-color-theme-light:   #ffffff;
+$text-color-theme-light-l: #ffffff;
 
 $text-color-theme-dark-d:  #fff;
 $text-color-theme-dark:    rgba(#fff, .95);
