--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -44,7 +44,7 @@ $red:             #f22635;
 $text-color-function: rgba(#fff, .9);
 
 // logo colors
-$mail-color:       #0072c5;
+$mail-color:       #b7c274;
 $facebook-color:   #4267b2;
 $google-plus-color:#ea4335;
 $twitter-color:    #1da1f2;
