--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -10,7 +10,7 @@ $main-color-2:     #f3c584;
 $text-color-2:     #fff;
 
 $main-color-3:     #7cc7bb;
-$text-color-3:     #fff;
+$text-color-3:     #000000;
 
 // background colors
 $background-color: #d0b0b0;
