--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -3,8 +3,8 @@
 ///
 
 // main colors
-$main-color-1:     #bb6170;
-$text-color-1:     #fff;
+$main-color-1:     #fff;
+$text-color-1:     #000;
 
 $main-color-2:     #f3c584;
 $text-color-2:     #fff;
@@ -13,7 +13,7 @@ $main-color-3:     #b9d9d4;
 $text-color-3:     #000000;
 
 // background colors
-$background-color: #d0b0b0;
+$background-color: #fff;
 // text colors
 $text-color-theme-light-d: #ffffff;
 $text-color-theme-light:   #ffffff;
