--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -15,9 +15,9 @@ $text-color-3:     #000000;
 // background colors
 $background-color: #fff;
 // text colors
-$text-color-theme-light-d: #ffffff;
-$text-color-theme-light:   #ffffff;
-$text-color-theme-light-l: #ffffff;
+$text-color-theme-light-d: #000;
+$text-color-theme-light:   #000;
+$text-color-theme-light-l: #000;
 
 $text-color-theme-dark-d:  #fff;
 $text-color-theme-dark:    rgba(#fff, .95);
