--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -9,7 +9,7 @@ $text-color-1:     #000;
 $main-color-2:     #f3c584;
 $text-color-2:     #fff;
 
-$main-color-3:     #b9d9d4;
+$main-color-3:     #bdd5d1;
 $text-color-3:     #000000;
 
 // background colors
