--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -50,3 +50,5 @@ $google-plus-color:#ea4335;
 $twitter-color:    #1da1f2;
 $github-color:     #000;
 $linkedin-color:   #1074af;
+$weibo-color:       #b7c274;
+$douban-color:       #b7c274;
