--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -3,7 +3,7 @@
 ///
 
 // main colors
-$main-color-1:     #fff;
+$main-color-1:     #6e89b5;
 $text-color-1:     #000;
 
 $main-color-2:     #f3c584;
