--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,6 +6,16 @@ layout: none
 {%- include snippets/get-lang.html -%}
 <html lang="{{ __return }}">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121680114-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-121680114-1');
+    </script>
+
     {%- include head.html -%}
     <script>
       {%- include scripts/utils.js -%}
