--- a/_includes/analytics-providers/google.html
+++ b/_includes/analytics-providers/google.html
@@ -1,4 +1,4 @@
-{%- if site.google.tracking_id -%}
+{%- if site.google.analytics.tracking_id -%}
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121680114-1"></script>
