--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -13,7 +13,7 @@ $main-color-3:     #bdd5d1;
 $text-color-3:     #000000;
 
 // background colors
-$background-color: #e8f0ff;
+$background-color: #ccffcc;
 // text colors
 $text-color-theme-light-d: #000;
 $text-color-theme-light:   #000;
