--- a/_sass/colors/_okukryol.scss
+++ b/_sass/colors/_okukryol.scss
@@ -9,11 +9,11 @@ $text-color-1:     #000;
 $main-color-2:     #f3c584;
 $text-color-2:     #fff;
 
-$main-color-3:     #bdd5d1;
+$main-color-3:     #f2ffe5;
 $text-color-3:     #000000;
 
 // background colors
-$background-color: #f2ffe5;
+$background-color: #bdd5d1;
 // text colors
 $text-color-theme-light-d: #000;
 $text-color-theme-light:   #000;
